# BLACJjACK

./: .dockerignore  .gitignore  AUDIO_MODE_GUIDE.md  AUTO_RESET_GUIDE.md  CMakeLists.txt  DEPLOYMENT_UPGRADE_PLAN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README.txt  config.json  docker-compose.yml  requirements.txt  setup.sh
.claude/: settings.local.json
models/: .claude.md  README.md
scripts/: download_dataset.py  train_yolov11.py
src/: main.cpp  main_headless.cpp
src/capture/: capture_interface.hpp  dxgi_capture.cpp  dxgi_capture.hpp  frame_buffer.hpp  roi_detector.hpp
src/core/: application.cpp  application.hpp  config_manager.cpp  config_manager.hpp  constants.hpp  game_state_tracker.cpp  game_state_tracker.hpp  realtime_advisor.cpp  realtime_advisor.hpp  types.hpp
src/intelligence/counting/: card_counter.cpp  card_counter.hpp  shuffle_detector.cpp  shuffle_detector.hpp
src/intelligence/strategy/: basic_strategy.cpp  basic_strategy.hpp  betting_strategy.cpp  betting_strategy.hpp
src/pipeline/: pipeline_manager.hpp  thread_pool.hpp
src/ui/alerts/: alert_manager.hpp  audio_alert_manager.cpp  audio_alert_manager.hpp
src/ui/overlay/: overlay_renderer.hpp
src/utils/: logger.cpp  logger.hpp  session_recorder.cpp  session_recorder.hpp
src/vision/inference/: tensorrt_engine.cpp  tensorrt_engine.hpp
src/vision/postprocessing/: card_tracker.hpp  nms_processor.cu
src/vision/preprocessing/: color_converter.cu  preprocessor.cpp  preprocessor.hpp
